<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_detail_received"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="295dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@color/colorAccent"/>

            <TextView
                style="@style/TextContent.Small.White"
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:background="#4D000000"
                android:gravity="center_vertical"
                android:textSize="32sp"
                android:text="@string/kue_name"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
        </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/detail"
                android:layout_margin="15dp"
                android:textColor="@android:color/black"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="8dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/bahan"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp">
            <TextView
                android:id="@+id/tv_item_bahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kue_bahan"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="8dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/cara_membuat"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp">
            <TextView
                android:id="@+id/tv_item_cara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/kue_cara"
                android:textColor="@android:color/black">
            </TextView>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>